<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
        <item
            android:id="@+id/option0"
            android:title="@string/Home"/>
        <item
            android:id="@+id/option1"
            android:title="@string/ClerkOption1"/>
        <item
            android:id="@+id/option2"
            android:title="@string/ClerkOption2"/>
        <item
            android:id="@+id/option3"
            android:title="@string/ClerkOption3"/>
        <item
            android:id="@+id/option4"
            android:title="@string/ClerkOption4"/>
        <item
            android:id="@+id/option5"
            android:title="@string/ClerkOption5"/>
        <item
            android:id="@+id/option6"
            android:title="@string/Logout"/>
</menu>