<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textEmployeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmployeeName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Role"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/textStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartDate"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/textEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EndDate"
        android:textSize="16sp" />

</LinearLayout>
