<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:stretchColumns="1"
            android:background="@color/colorPrimary">

            <TextView
                android:text="@string/Item"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:padding="10dp" />

            <TextView
                android:text="@string/NeededQuantity"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:text="@string/ActualQuantiy"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>