<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <TextView
        android:id="@+id/lblTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="6dp"
        android:text="Disbursement Form"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="24sp" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dfCollectionPoint"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/dfEtxCollectionPoint"
                android:layout_width="200dp"
                android:enabled="false"
                android:inputType="textMultiLine"
                android:lines="2"
                android:paddingLeft="10dp"
                android:textColor="#565555"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dfDepartmentName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dfEtxDepartmentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="10dp"
                android:textColor="#565555"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dfRepName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dfEtxReprsentative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="10dp"
                android:textColor="#565555"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dfDisburseCode"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dfEtxDisbursementCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="10dp"
                android:textColor="#565555"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dfStatus"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/dfEtxStatus"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="10dp"
                android:textColor="#565555"
                android:textSize="15sp" />
        </TableRow>
        <TableRow>

            <ListView
                android:id="@+id/dfLvDisbursementDetail"
                android:layout_width="355dp"
                android:layout_height="200dp"
                android:layout_span="2" />
        </TableRow>
        <TableRow>
            <TextView />
            <Button
                android:id="@+id/dfBtnMarkAsNotCollected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#e85b01"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:text="@string/dfBtnNotCollected" />

        </TableRow>

    </TableLayout>




</LinearLayout>