<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:stretchColumns="1">

        <TableRow>
            <ImageView
                android:layout_span="2"
                android:id="@+id/rdMap"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdDescription"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/rdEtxDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:enabled="false"
                android:textColor="#565555" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdLocation"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/rdEtxLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="30dp"
                android:textColor="#565555" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdStock"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/rdEtxStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="30dp"
                android:text="100"
                android:textColor="#565555" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdNeeded"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/rdEtxNeeded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="30dp"
                android:text="11"
                android:textColor="#565555" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdRetrieved"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/rdEtxRetrieved"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingLeft="30dp"
                android:selectAllOnFocus="true"
                android:text="10"
                android:textColor="#565555" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdNotes"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/rdEtxNotes"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Your notes here"
                android:inputType="textMultiLine"
                android:paddingLeft="30dp"
                android:selectAllOnFocus="false"
                android:lines="2"
                android:scrollbars="vertical"
                android:singleLine="false" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView />


            <Button
                android:id="@+id/rdBtnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="Update"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdItemCode"
                android:textSize="18sp"
                android:textColor="?android:colorBackground"/>

            <EditText
                android:id="@+id/rdEtxItemCode"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:selectAllOnFocus="true"
                android:text="10"
                android:enabled="false"
                android:textColor="?android:colorBackground" />
        </TableRow>

    </TableLayout>
</ScrollView>
</LinearLayout>
