<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ddTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddItemName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ddEtxItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:enabled="false"
                android:textColor="#565555" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ddTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddRequestCode"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ddEtxRequestCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="30dp"
                android:textColor="#565555" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddQuantityNeeded"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ddEtxQuantityNeeded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="30dp"
                android:text="100"
                android:textColor="#565555" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddQuantityRetrieved"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ddEtxQuantityRetrieved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="30dp"
                android:text="11"
                android:textColor="#565555" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rdTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddQuantityActual"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ddEtxQuantityActual"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingLeft="30dp"
                android:selectAllOnFocus="true"
                android:text="10"
                android:textColor="#565555" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ddTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdNotes"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ddEtxNotes"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Your notes here"
                android:inputType="textMultiLine"
                android:paddingLeft="30dp"
                android:selectAllOnFocus="false"
                android:lines="5"
                android:scrollbars="vertical"
                android:singleLine="false" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView />


            <Button
                android:id="@+id/ddBtnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="Update"
                android:textColor="#ffffff" />
        </TableRow>
    </TableLayout>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ddInviDisbursementCode"
        android:enabled="false"
        android:textColor="?android:colorBackground"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ddInviItemCode"
        android:enabled="false"
        android:textColor="?android:colorBackground"/>
</LinearLayout>
